--- a/about.html
+++ b/about.html
@@ -30,7 +30,10 @@
         <div class="container">
             <div class="col">
                 <h1>Welcome to my site!</h1>
-                <p>This site is a Star Wars database that uses the https://swapi.co/ api. In the search page you may type a number that is specified in the range of the text box to view a popup with the information on the Star Wars object that is associated with the number. The random tab will allow you to get the information on a random object from the type that you choose.</p>
+                <p>This site is a Star Wars database that uses the https://swapi.co/ api. In the search page you may type a
+                    number that is specified in the range of the text box to view a popup with the information on the Star
+                    Wars object that is associated with the number. The random tab will allow you to get the information
+                    on a random object from the type that you choose.</p>
             </div>
         </div>
     </div>
