--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand">Star Wars Database</a>
+        <a class="navbar-brand"><img src="http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png" alt="Star Wars Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
+            <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="index.html">Home</a>
                 <a class="nav-item nav-link" href="about.html">About</a>
                 <a class="nav-item nav-link" href="search.html">Search</a>
