--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand"><img src="http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png" alt="Star Wars Logo"></a>
+        <a class="navbar-brand">
+            <img src="http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png" alt="Star Wars Logo">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,12 +36,19 @@
                     number that is specified in the range of the text box to view a popup with the information on the Star
                     Wars object that is associated with the number. The random tab will allow you to get the information
                     on a random object from the type that you choose.</p>
+                <h1>Sources</h1>
+                <p>API used: https://swapi.co/
+                    <br> Logo IMG: http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png
+                    <br> Background IMG: http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png
+                    <br> Starwars: Lucasfilm Ltd.
+
+                </p>
             </div>
         </div>
     </div>
     <footer>
         <div class="container-fluid">
-            <p>mfdsdmlsa</p>
+            <p>© 2017 Bobby Laudeman Inc.</p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
