--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand"><img src="http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png" alt="Star Wars Logo"></a>
+        <a class="navbar-brand">
+            <img src="http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png" alt="Star Wars Logo">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,7 +31,7 @@
     <div class="jumbotron jumbotron-fluid"></div>
     <footer>
         <div class="container-fluid">
-            <p>mfdsdmlsa</p>
+            <p>© 2017 Bobby Laudeman Inc.</p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
