--- a/about.html
+++ b/about.html
@@ -36,11 +36,12 @@
                     number that is specified in the range of the text box to view a popup with the information on the Star
                     Wars object that is associated with the number. The random tab will allow you to get the information
                     on a random object from the type that you choose.</p>
-                <h1>Sources</h1>
+                <h1>Copyright</h1>
                 <p>API used: https://swapi.co/
                     <br> Logo IMG: http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png
                     <br> Background IMG: http://pngimg.com/uploads/star_wars_logo/star_wars_logo_PNG3.png
                     <br> Starwars: Lucasfilm Ltd.
+                    <br> This site was built using Bootstrap.
 
                 </p>
             </div>
