--- a/search.html
+++ b/search.html
@@ -69,12 +69,6 @@
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
                 <div class="modal-body" id="modalBody">
                     ...
                 </div>
@@ -99,8 +93,6 @@
     <script src="js/parse-response.js"></script>
     <script src="js/ajax.js"></script>
     <script>
-        var modalTitle = document.getElementById('modalLabel');
-        var modalContent = document.getElementById('modalTitle');
         var peopleSearch = document.getElementById('peopleSearch');
         var planetSearch = document.getElementById('planetSearch');
         var filmSearch = document.getElementById('filmSearch');
@@ -109,15 +101,15 @@
         var starshipSearch = document.getElementById('starshipSearch');
 
         peopleSearch.nextSibling.addEventListener('click', function () {
-            getSearch("person", peopleSearch.value);
+            getSearch("people", peopleSearch.value);
         });
 
         planetSearch.nextSibling.addEventListener('click', function () {
-            getSearch("planet", planetSearch.value);
+            getSearch("planets", planetSearch.value);
         });
 
         filmSearch.nextSibling.addEventListener('click', function () {
-            getSearch("film", filmSearch.value);
+            getSearch("films", filmSearch.value);
         });
 
         speciesSearch.nextSibling.addEventListener('click', function () {
@@ -125,11 +117,11 @@
         });
 
         vehicleSearch.nextSibling.addEventListener('click', function () {
-            getSearch("vehicle", vehicleSearch.value);
+            getSearch("vehicles", vehicleSearch.value);
         });
 
         starshipSearch.nextSibling.addEventListener('click', function () {
-            getSearch("starship", starshipSearch.value);
+            getSearch("starships", starshipSearch.value);
         });
     </script>
 </body>
